syntax = "proto3";

package com.example.review;

// Сервис для управления отзывами
service ReviewService {
    rpc AddReview (AddReviewRequest) returns (ReviewResponse);
    rpc GetReviews (GetReviewsRequest) returns (ReviewsResponse);
}

// Запрос для добавления отзыва
message AddReviewRequest {
    string product_id = 1;  // ID продукта
    string user_id = 2;     // ID пользователя
    int32 rating = 3;       // Оценка
    string comment = 4;     // Отзыв
}

// Ответ на добавление отзыва
message ReviewResponse {
    string status = 1;      // Статус операции
}

// Запрос для получения отзывов
message GetReviewsRequest {
    string product_id = 1;  // ID продукта
}

// Ответ с отзывами
message ReviewsResponse {
    repeated Review reviews = 1; // Список отзывов
}

// Структура отзыва
message Review {
    string user_id = 1;     // ID пользователя
    int32 rating = 2;       // Оценка
    string comment = 3;     // Отзыв
}
